fix: smaller header size on mobile

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -33,7 +33,7 @@ a[href]
   min-height: 100vh
 
 .alt-main
-  background-color: rgb(17, 17, 17, 0.3)
+  background-color: rgba(11, 11, 11, 0.5)
   max-width: 300px
   padding: 20px
   border-radius: 60px
@@ -53,7 +53,7 @@ a[href]
   letter-spacing: -2.25px
   margin-bottom: 10px
   font-kerning: none
-  font-weight: 800
+  font-size: 30px
 
 .header-height
   letter-spacing: -0.5px
